# sfml_games

./: .clang-format  .clang-tidy  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  ClangTools.cmake  README.md  Timber  Timber.sln  mad_dead  valgrind.sh
Timber/: Timber.cpp  Timber.vcxproj  Timber.vcxproj.filters
bob_was_alone/: CMakeLists.txt  make.sh
bob_was_alone/inc/: collision_detection.h  hud.h  playable_character.h  text_wrapper.h  texture_holder.h  utils.h
bob_was_alone/src/: hud.cpp  main.cpp  particle_system.cpp  sound_manager.cpp  text_wrapper.cpp  texture_holder.cpp
inc/: bob.h  bullet.h  collision_detection.h  drawing.h  engine.h  game.h  hud.h  level_manager.h  particle.h  particle_system.h  pickup.h  playable_character.h  player.h  random.h  rectangle.h  screen.h  sound_manager.h  sounds.h  text.h  text_wrapper.h  texture_holder.h  thomas.h  utils.h  world.h  zombie.h
mad_dead/: CMakeLists.txt  README.md  make.sh
mad_dead/inc/: game.h  rectangle.h  score.h  text_wrapper.h  utils.h  zombie_arena.h
mad_dead/src/: bullet.cpp  pickup.cpp  score.cpp  sounds.cpp  texture_holder.cpp
res/: Timber1
res/shaders/: ripple_shader.frag  vert_shader.vert
src/: .Timber.cpp.swp  .bullet.cpp.swp  .game.cpp.swp  .main.cpp.swp  Timber.cpp  bob.cpp  bullet.cpp  collision_detection.cpp  drawing.cpp  engine.cpp  game.cpp  hud.cpp  level_manager.cpp  main.cpp  particle.cpp  particle_system.cpp  playable_character.cpp  player.cpp  random.cpp  rectangle.cpp  screen.cpp  sound_manager.cpp  text.cpp  text_wrapper.cpp  texture_holder.cpp  thomas.cpp  utils.cpp  zombie.cpp  zombie_arena.cpp
timber/: CMakeLists.txt  README.md  README.md.orig  make.sh
timber/inc/: game.h  rectangle.h  utils.h
timber/src/: text.cpp  utils.cpp
